Fix wrapping issue with manga entries on friend card

--- a/src/components/FriendCard.scss
+++ b/src/components/FriendCard.scss
@@ -71,21 +71,12 @@
   margin-bottom: 10px; 
 }
 
-.friendCard__last_online { 
-
-}
-
 .friendCard__flip_btn { 
   width: 24px; 
   height: 24px; 
 }
 
-// Latest Updates Section 
-.friendCard__recently_watched_list_item_container { 
-  color: rgb(194, 192, 192);
-
-}
-
+// Latest Updates General 
 .friendCard__recent_header { 
   color:rgb(194, 192, 192); 
   display: flex; 
@@ -95,24 +86,20 @@
 }
 
 .friendCard__recent_grid { 
-
-
   width: 100%; 
 }
 
-// Anime Section 
-
-.friendCard__recentlyWatchedEntry {  // Rename to recentlyWatchedContainer
-  display: flex; 
-  padding: 5px; 
-  margin: 0; 
+.friendCard__recent_thumbnail {
+  width: 60px; 
+  height: 90px;
 }
 
-.friendCard__recently_watched { 
-  padding-top: 10px;
+.friendCard__recent_thumbnail:hover { 
+  transform: scale(4);
+  z-index: 1000;
 }
 
-.friendCard__recentlyWatchedTitle { 
+.friendCard__recent_entry_title { 
   color: white; 
   text-decoration: none;
   overflow: hidden;
@@ -120,37 +107,26 @@
    display: -webkit-box;
    -webkit-line-clamp: 2; /* number of lines to show */
            line-clamp: 2; 
-  /*
-  position: relative; 
-  bottom: 70px;
-  padding-left: 5px;
-  z-index: 2;
-  */
 }
 
-.friendCard__recentlyWatchedTitle:hover { 
+.friendCard__recent_entry_title:hover { 
   color: #3f51b5; 
 }
 
-.friendCard__recentlyWatchedThumbnail {
-  width: 60px; 
-  height: 90px;
+// Anime Section 
+
+
+
+.friendCard__recently_watched { 
+  padding-top: 10px;
 }
 
-.friendCard__recentlyWatchedThumbnail:hover { 
-  transform: scale(4);
-  z-index: 1000;
-}
 
-.friendCard__recentlyWatchedInfo {   // DONT NEED ONCE REWORK
-  position: relative; 
-  bottom: 70px; 
-  left: 60px;
-  padding-left: 5px;
-  z-index: 1;
-}
 
-.friendCard__recentlyWatchedStatus {
+
+
+
+.friendCard__recently_watched_status {
   padding-top: 10px; 
 }
 
@@ -158,5 +134,12 @@
 .friendCard__recentlyRead { 
   padding-top: 10px;
 }
+
+.friendCard__recently_read_list_item_container { 
+  display: flex; 
+  flex-direction: row; 
+  flex-wrap: nowrap !important;
+}
+
 
 
